crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-05.stderr
TOML parse error at line 1, column 24
  |
1 | bad-uni-esc-05 = "val\Ugggggggg"
  |                        ^
too few unicode value digits, expected unicode hexadecimal value
